--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,32 @@
     transform: rotate(360deg);
   }
 }
+
+
+.login-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* background-color: green; */
+  height: 100vh;
+}
+
+
+.login-form{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* background-color: aqua; */
+
+
+}
+
+.login-form form{
+
+  border-radius: 10px;
+  padding: 2rem;
+  box-shadow: 4px 8px 58px -27px rgba(0,0,0,0.99);
+-webkit-box-shadow: 4px 8px 58px -27px rgba(0,0,0,0.99);
+-moz-box-shadow: 4px 8px 58px -27px rgba(0,0,0,0.99);
+}
